# LuaInMinecraftBukkitII-FFIPlugin-Cpp

./: .gitignore  CMakeLists.txt  README.md
src/: bridge.cpp  bridge.h  config.h  debug.h  ffi_init.cpp  ffi_init.h  ffi_type.h  jni_bridge.cpp  jni_bridge.h  jni_bridge_data.h  jni_bridge_inner.cpp  jni_bridge_inner.h  plugin.cpp  plugin.h
src/plugin/: ffi_init.cpp  ffi_init.h  ffi_type.h  plugin.cpp  plugin.h
